Add basic HTML/CSS

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Weather App</title>
 </head>
 <body>
-  
+  <div class="page-wrapper">
+    <div class="header">
+      <h1>Weather App</h1>
+    </div>
+
+    <div class="main-content">
+      <div class="search-container">
+        <input type="text" >
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 256 256"><path fill="currentColor" d="M232.49 215.51L185 168a92.12 92.12 0 1 0-17 17l47.53 47.54a12 12 0 0 0 17-17ZM44 112a68 68 0 1 1 68 68a68.07 68.07 0 0 1-68-68Z"/></svg>
+      </div>
+    </div>
+
+    <div class="footer">
+      <a href="https://www.flaticon.com/free-icons/cloudy" title="cloudy icons">Cloudy icons created by Phoebeicons - Flaticon</a>
+    </div>
+  </div>
 </body>
 </html>
