Add function to change between Celsius/Fahrenheit

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         <input type="text" placeholder="Salvador">
         <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 256 256"><path fill="currentColor" d="M232.49 215.51L185 168a92.12 92.12 0 1 0-17 17l47.53 47.54a12 12 0 0 0 17-17ZM44 112a68 68 0 1 1 68 68a68.07 68.07 0 0 1-68-68Z"/></svg>
       </div>
+      <button class="temp-measure celsius"><span class="temperature-c temp-style-display">°C</span>    /   <span class="temperature-f">°F</span></button>
     </div>
     <div class="main-content">
 
